--- a/styles/thankyou.scss
+++ b/styles/thankyou.scss
@@ -17,9 +17,9 @@
   border-radius: 20px;
   padding: 20px;
   font-size: 2rem;
-  background-color: #4b4949;
-  border: 0.1px solid white;
-  color: white;
+  background-color: var(--background);
+  border: 0.1px solid var(--text);
+  color: var(--text);
   box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
   transition: 300ms;
   text-decoration: none;
@@ -34,8 +34,8 @@
 .success a:hover,
 .success a:focus {
   font-weight: bold;
-  background-color: gold;
-  color: #4b4949;
+  background-color: var(--accent);
+  color: var(--background);
 }
 
 @media screen and (max-width: 600px) {
