--- a/styles/style.css
+++ b/styles/style.css
@@ -496,7 +496,7 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(1, 22, 39, 0.9);
+  background: rgba(var(--background-rgb), 0.9);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   display: none;
