--- a/styles/style.scss
+++ b/styles/style.scss
@@ -190,7 +190,7 @@ nav a:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(1, 22, 39, 0.9);
+  background: rgba(var(--background-rgb), 0.9);
   backdrop-filter: blur(5px);
   display: none;
   justify-content: center;
